Updated the html file

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-md-12">
                 <div id="buttons-view"></div>
             </div>
         </div>
         <div class="row">
 
-            <div class="col-sm-9">
+            <div class="col-md-9">
                 <div id="gifs-appear-here">
                 </div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3">
                 <form id="movies-form">
                     <label for="movies-input">Add a movie</label>
                     <input type="text" id="movies-input"><br>
